<resources>
    <string name="app_name">Currency Converter</string>

    <!-- Dialog Approval -->
    <string name="approval_required">Approval Required</string>
    <string name="cancel">Cancel</string>
    <string name="approve">Approve</string>

    <!-- Fragment Convert -->
    <string name="precedes">precedes</string>
    <string name="sec_left">sec left</string>
    <string name="convert">Convert</string>

    <!-- Fragment Main -->
    <string name="gbp">GBP</string>
    <string name="select_current_currency">Select Current Currency</string>
    <string name="usd">USD</string>
    <string name="select_target_currency">Select Target Currency</string>
    <string name="amount">Amount:</string>
    <string name="_0_0">0.0</string>
    <string name="calculate">Calculate</string>
    <string name="currency_value">%1$s %2$s</string>

    <!-- Approval Dialog -->
    <string name="approval_message">You are about to get %1$s for %2$s. Do you approve this transaction?</string>

    <!-- Fragment Success -->
    <string name="start_over">Start Over</string>
    <string name="amount_in_your_account">Great! Now you have %1$s in your account. </string>
    <string name="your_conversion_rate_was">Your conversion rate was:</string>
    <string name="conversion_rate">1 / %1$s</string>

    <!-- Errors -->
    <string name="error_invalid_value">Please enter a valid value</string>
    <string name="error_same_currencies_selected">You necessarily do not need a app for this conversion ;)</string>

    <string-array name="currencies">
        <item>USD</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>EUR</item>
    </string-array>
</resources>