<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/size_8"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_approval_required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/approval_required"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_16"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/tv_approval_required"
        tools:text="You are about to get 178 USD for 150 GBP. Do you approve this transaction?" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginHorizontal="@dimen/size_4"
        android:layout_marginVertical="@dimen/size_4"
        app:layout_constraintEnd_toStartOf="@+id/btn_approve"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_approve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/approve"
        android:layout_marginHorizontal="@dimen/size_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toTopOf="@+id/btn_cancel" />


</androidx.constraintlayout.widget.ConstraintLayout>